# enumb

./: .gitignore  README.md  app.py  pyproject.toml
enumb/: __init__.py  autos.py  bases.py  classes.py  enums.py  generators.py  meta.py  misc.py  models.py  numeric.py  other.py  string.py  types.py  utils.py
