[tool.poetry]
name = "enumb"
version = "0.1.2"
description = "Concise, Pythonic Enums"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
export = {git = "https://github.com/tombulled/export.git", rev = "dev"}
case = {git = "https://github.com/tombulled/case.git", rev = "dev"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
